# rustretto

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  default.nix
compiler/: Cargo.toml
compiler/backend/: Cargo.toml
compiler/backend/src/: codegen.rs  generate.rs  lib.rs  mangle.rs
compiler/backend/src/codegen/: common.rs  decls.rs  parts.rs
compiler/backend/src/codegen/parts/: expr.rs  method.rs  prelude.rs
compiler/backend/src/layout/: fields.rs  mod.rs  vtable.rs
compiler/frontend/: Cargo.toml
compiler/frontend/src/: blocks.rs  classes.rs  disasm.rs  frame.rs  lib.rs  loader.rs  translate.rs  types.rs
compiler/src/: blocks.rs  classes.rs  compile.rs  disasm.rs  driver.rs  frame.rs  generate.rs  graph.rs  loader.rs  main.rs  mangle.rs  target.rs  translate.rs  types.rs  vtable.rs
compiler/src/disasm/: instr_block.rs  mod.rs
compiler/src/layout/: fields.rs  mod.rs
compiler/src/utils/: min_heap.rs  mod.rs
compiler/tests/: compile.rs  utils.rs
compiler/tests/cases/: array.yml  clinit.yml  compare_address.yml  compare_long.yml  fields.yml  for_loop.yml  if_else.yml  inheritance.yml  interfaces.yml  lookup_switch.yml  println.yml  sync_block.yml  table_switch.yml  unicode.yml  while_loop.yml
crates/classfile/: Cargo.toml
crates/classfile/src/: access_flags.rs  attributes.rs  buffer.rs  constant_pool.rs  descriptors.rs  instructions.rs  lib.rs
crates/classfile/src/attrs/: code.rs  mod.rs  stack_map_table.rs
crates/jar/: Cargo.toml
crates/jar/src/: lib.rs  manifest.rs
crates/llvm/: Cargo.toml  build.rs
crates/llvm/src/: buffer.rs  codegen.rs  error.rs  lib.rs  message.rs  module.rs  transform.rs
crates/llvm/wrappers/: target.c  triple.cpp
crates/strbuf/: Cargo.toml
crates/strbuf/src/: lib.rs
runtime/: Cargo.toml  Makefile  api.c  array.h  extern.h  native.c  ref.h  stubs.c  thread.h  utils.h
runtime/api/: array.c  native.c  object.c  start.c  string.c  stubs.c  throw.c
runtime/lib/: array.h  extern.h  monitor.h  object.h  ref.h  string.h  utils.h
runtime/src/: io.rs  lib.rs  native.rs  stubs.rs  unwind.rs
tools/javap/: Cargo.toml
tools/javap/src/: main.rs
tools/javapv/: Cargo.toml
tools/javapv/src/: main.rs
tools/opt/: Cargo.toml
tools/opt/src/: dump.rs  main.rs
tools/opt/src/disasm/: instr_block.rs
