[package]
name = "compiler"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]

[dependencies]
env_logger = "0.5.13"
failure = "0.1.2"
log = "0.4.6"
petgraph = "0.4.13"
structopt = "0.2.13"
tempfile = "3.0.4"

[dependencies.classfile]
path = "../crates/classfile"

[dependencies.jar]
path = "../crates/jar"

[dev-dependencies]
assert_cli = "0.6.3"
