[package]
name = "compiler"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
edition = "2018"

[dependencies]
env_logger = { version = "0.5.13", default-features = false }
failure = "0.1.2"
fnv = "1.0.6"
idna = "0.1.5"
indexmap = "1.0.2"
log = "0.4.6"
petgraph = "0.4.13"
platforms = "0.1.4"
structopt = "0.2.13"
tempfile = "3.0.4"

[dependencies.strbuf]
path = "../crates/strbuf"

[dependencies.classfile]
path = "../crates/classfile"

[dependencies.jar]
path = "../crates/jar"

[dependencies.llvm]
path = "../crates/llvm"

[dev-dependencies]
assert_cli = "0.6.3"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_yaml = "0.8.8"
