[package]
name = "jar"
version = "0.1.0"
authors = ["Sam Rijs <srijs@airpost.net>"]
edition = "2018"

[dependencies]
bytes = "0.4.10"
failure = "0.1.2"
fnv = "1.0.6"
indexmap = "1.0.2"
zip = { git = "https://github.com/srijs/zip-rs.git", rev = "6ca4bd4" }

[dependencies.strbuf]
path = "../strbuf"

[dependencies.classfile]
path = "../classfile"
